force-app/main/default/objects/Candidate__c/fields/Approved_comments__c.field-meta.xml
<CustomField>
    <fullName>Approved_comments__c</fullName>
    <label>Approved comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>