force-app/main/default/objects/Candidate__c/fields/Bench_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bench_Comments__c</fullName>
    <label>Bench Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>