force-app/main/default/objects/Candidate__c/fields/BlackList_Reason__c.field-meta.xml
<CustomField>
    <fullName>BlackList_Reason__c</fullName>
    <label>BlackList Reason</label>
    <type>TextArea</type>
</CustomField>