force-app/main/default/objects/Candidate__c/fields/BlackListed__c.field-meta.xml
<CustomField>
    <fullName>BlackListed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlackListed</label>
    <type>Checkbox</type>
</CustomField>