force-app/main/default/objects/Candidate__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <label>Candidate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Contact</fullName>
                <default>true</default>
                <label>First Contact</label>
            </value>
            <value>
                <fullName>Internal English Evaluation</fullName>
            </value>
            <value>
                <fullName>Technical Test</fullName>
            </value>
            <value>
                <fullName>HR Interview</fullName>
            </value>
            <value>
                <fullName>Manager Interview</fullName>
            </value>
            <value>
                <fullName>Psychometrics Tests</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>