force-app/main/default/objects/Candidate__c/fields/Career_Title__c.field-meta.xml
<CustomField>
    <fullName>Career_Title__c</fullName>
    <label>Career Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>