force-app/main/default/objects/Candidate__c/fields/Description1__c.field-meta.xml
<CustomField>
    <fullName>Description1__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>