force-app/main/default/objects/Candidate__c/fields/Description2__c.field-meta.xml
<CustomField>
    <fullName>Description2__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>