force-app/main/default/objects/Candidate__c/fields/Description3__c.field-meta.xml
<CustomField>
    <fullName>Description3__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>