force-app/main/default/objects/Candidate__c/fields/Dropped_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Out_Reason__c</fullName>
    <label>Dropped Out Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>