force-app/main/default/objects/Candidate__c/fields/E_Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Exam_Status__c</fullName>
    <label>E. Exam Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>