force-app/main/default/objects/Candidate__c/fields/Education_Comments__c.field-meta.xml
<CustomField>
    <fullName>Education_Comments__c</fullName>
    <label>Education Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>