force-app/main/default/objects/Candidate__c/fields/Education_Progress__c.field-meta.xml
<CustomField>
    <fullName>Education_Progress__c</fullName>
    <label>Education Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carreer_Progress</valueSetName>
    </valueSet>
</CustomField>