force-app/main/default/objects/Candidate__c/fields/Education_Type__c.field-meta.xml
<CustomField>
    <fullName>Education_Type__c</fullName>
    <label>Education Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>University graduate</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>