force-app/main/default/objects/Candidate__c/fields/Employer2__c.field-meta.xml
<CustomField>
    <fullName>Employer2__c</fullName>
    <label>Employer&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>