force-app/main/default/objects/Candidate__c/fields/End_Year__c.field-meta.xml
<CustomField>
    <fullName>End_Year__c</fullName>
    <label>End Year (or expected)</label>
    <type>Date</type>
</CustomField>