force-app/main/default/objects/Candidate__c/fields/English_Comments__c.field-meta.xml
<CustomField>
    <fullName>English_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>