force-app/main/default/objects/Candidate__c/fields/English_Evaluation_Comments__c.field-meta.xml
<CustomField>
    <fullName>English_Evaluation_Comments__c</fullName>
    <label>English Evaluation Comments</label>
    <type>TextArea</type>
</CustomField>