force-app/main/default/objects/Candidate__c/fields/English_Exam_Score__c.field-meta.xml
<CustomField>
    <fullName>English_Exam_Score__c</fullName>
    <label>English Exam Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>