force-app/main/default/objects/Candidate__c/fields/English_Level__c.field-meta.xml
<CustomField>
    <fullName>English_Level__c</fullName>
    <description>English Level of the candidate</description>
    <label>English Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Intermediate-Advanced</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>