force-app/main/default/objects/Candidate__c/fields/English_Rescue_Comments__c.field-meta.xml
<CustomField>
    <fullName>English_Rescue_Comments__c</fullName>
    <label>English Rescue Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>