force-app/main/default/objects/Candidate__c/fields/First_Contact_Comments__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Comments__c</fullName>
    <label>First Contact Comments</label>
    <type>TextArea</type>
</CustomField>