force-app/main/default/objects/Candidate__c/fields/Int_Date__c.field-meta.xml
<CustomField>
    <fullName>Int_Date__c</fullName>
    <label>Int. Date</label>
    <type>DateTime</type>
</CustomField>