force-app/main/default/objects/Candidate__c/fields/Interview_Comments__c.field-meta.xml
<CustomField>
    <fullName>Interview_Comments__c</fullName>
    <label>Interview Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>