force-app/main/default/objects/Candidate__c/fields/Issued_Date1__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date1__c</fullName>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>