force-app/main/default/objects/Candidate__c/fields/Issuing_Organization1__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Organization1__c</fullName>
    <label>Issuing Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>