force-app/main/default/objects/Candidate__c/fields/Java_Expierence__c.field-meta.xml
<CustomField>
    <fullName>Java_Expierence__c</fullName>
    <description>Java Expierences of the candidate</description>
    <label>Java Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>