force-app/main/default/objects/Candidate__c/fields/M_Interview_Status__c.field-meta.xml
<CustomField>
    <fullName>M_Interview_Status__c</fullName>
    <label>M. Interview Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>