force-app/main/default/objects/Candidate__c/fields/Not_Interested_Comments__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Comments__c</fullName>
    <label>Not Interested Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>