force-app/main/default/objects/Candidate__c/fields/Other_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Institution_Name__c</fullName>
    <label>Other Institution Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>