force-app/main/default/objects/Candidate__c/fields/Position1__c.field-meta.xml
<CustomField>
    <fullName>Position1__c</fullName>
    <label>Position</label>
    <length>20</length>
    <type>Text</type>
</CustomField>