force-app/main/default/objects/Candidate__c/fields/Position2__c.field-meta.xml
<CustomField>
    <fullName>Position2__c</fullName>
    <label>Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>