force-app/main/default/objects/Candidate__c/fields/Psyco_Test_Statuc__c.field-meta.xml
<CustomField>
    <fullName>Psyco_Test_Statuc__c</fullName>
    <label>Psychometric Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>