force-app/main/default/objects/Candidate__c/fields/Responsibilities2__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities2__c</fullName>
    <label>Responsibilities</label>
    <type>TextArea</type>
</CustomField>