force-app/main/default/objects/Candidate__c/fields/Stand_by_Comments__c.field-meta.xml
<CustomField>
    <fullName>Stand_by_Comments__c</fullName>
    <label>Stand by Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>