force-app/main/default/objects/Candidate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trainee_Group</fullName>
                <default>true</default>
                <label>Trainee Group</label>
            </value>
            <value>
                <fullName>Bench_In_Process</fullName>
                <label>Bench In Process</label>
            </value>
            <value>
                <fullName>English Rescue</fullName>
            </value>
            <value>
                <fullName>Dropped Out</fullName>
            </value>
            <value>
                <fullName>Bench_Eligible</fullName>
                <label>Bench Eligible</label>
            </value>
            <value>
                <fullName>Stand by</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>