force-app/main/default/objects/Candidate__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Object Oriented Programming</fullName>
            </value>
            <value>
                <fullName>Integration Services</fullName>
            </value>
            <value>
                <fullName>Other CRM</fullName>
            </value>
            <value>
                <fullName>Web Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>