force-app/main/default/objects/Candidate__c/fields/Technical_Test_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technical_Test_Comments__c</fullName>
    <label>Technical Test Comments</label>
    <type>TextArea</type>
</CustomField>