force-app/main/default/objects/Candidate__c/fields/Technical_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Technical_Test_Status__c</fullName>
    <label>Technical Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>