force-app/main/default/objects/Candidate__c/fields/Test_Comments__c.field-meta.xml
<CustomField>
    <fullName>Test_Comments__c</fullName>
    <label>Test Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>