force-app/main/default/objects/Candidate__c/fields/Test_Score__c.field-meta.xml
<CustomField>
    <fullName>Test_Score__c</fullName>
    <label>Test Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>