force-app/main/default/objects/Candidate__c/fields/Title1__c.field-meta.xml
<CustomField>
    <fullName>Title1__c</fullName>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>