force-app/main/default/objects/Candidate__c/fields/Title3__c.field-meta.xml
<CustomField>
    <fullName>Title3__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>