force-app/main/default/objects/Candidate__c/fields/Years2__c.field-meta.xml
<CustomField>
    <fullName>Years2__c</fullName>
    <label>Years</label>
    <length>12</length>
    <type>Text</type>
</CustomField>