force-app/main/default/objects/Candidate__c/recordTypes/Trainee.recordType-meta.xml
<RecordType>
    <fullName>Trainee</fullName>
    <active>true</active>
    <label>Trainee</label>
</RecordType>