force-app/main/default/objects/Candidate__c/validationRules/BlackListed.validationRule-meta.xml
<ValidationRule>
    <fullName>BlackListed</fullName>
    <active>true</active>
    <errorConditionFormula>BlackListed__c == true &amp;&amp;  BlackList_Reason__c == null</errorConditionFormula>
    <errorDisplayField>BlackList_Reason__c</errorDisplayField>
    <errorMessage>Please add the reason why this candidate should be blacklisted</errorMessage>
</ValidationRule>