force-app/main/default/objects/Candidate__c/listViews/Trainee_Plus.listView-meta.xml
<ListView>
    <fullName>Trainee_Plus</fullName>
    <columns>NAME</columns>
    <columns>Phone_number__c</columns>
    <columns>Email_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Candidate__c.Other</value>
    </filters>
    <label>Other</label>
</ListView>